[package]
name = "egl-wrapper"
version = "0.1.0"
authors = ["Juuso Tuononen <jutuon@outlook.com>"]


[dependencies]
bitflags = "1.0"

[dependencies.egl-sys]
path = "../egl-sys"
features = [
    "racer_autocomplete_workaround",
    "extensions_module",
    "EGL_KHR_create_context",
    "EGL_EXT_platform_base",
    "EGL_EXT_platform_x11",
    "EGL_EXT_platform_wayland"
]
#git = "https://github.com/jutuon/egl-sys"


[dev-dependencies]
gl = "0.7.0"
winit = "0.9"