[package]
name = "egl-wrapper"
version = "0.1.0"
authors = ["Juuso Tuononen <jutuon@outlook.com>"]


[dependencies]
bitflags = "1.0"

[dependencies.egl-sys]
git = "https://github.com/jutuon/egl-sys"
rev = "7458c10576d1837b2a25dd2504f66ac728cb1e1c"
features = [
    "racer_autocomplete_workaround",
    "extensions_module",
    "EGL_KHR_create_context",
    "EGL_EXT_platform_base",
    "EGL_EXT_platform_x11",
    "EGL_EXT_platform_wayland"
]


[dev-dependencies]
gl = "0.7.0"
winit = "0.9"
x11 = "2.17"